--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="238dp"
         android:layout_marginTop="20dp"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/apple" />
 
     <LinearLayout
         android:layout_width="match_parent"
