--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             android:layout_margin="16dp"
             android:clickable="true"
             android:focusable="true"
+            android:longClickable="true"
             app:backgroundTint="@color/colorAccent"
             app:srcCompat="@drawable/ic_photo_camera" />
 
