--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom|end"
-        android:orientation="vertical">
+        android:gravity="bottom|end">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabPlot"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:longClickable="true"
+            android:visibility="invisible"
+            app:backgroundTint="@android:color/holo_purple"
+            app:srcCompat="@drawable/ic_compare_white_24dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -57,7 +72,7 @@
         app:srcCompat="@drawable/spectrum" />
 
     <TextView
-        android:id="@+id/picResult"
+        android:id="@+id/finalResult"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
