Addfunc: absorbance data to TXT
and fix adaptive icon

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -5,5 +5,8 @@
         <external-files-path
             name="images"
             path="Pictures" />
+        <external-files-path
+            name="data"
+            path="AData" />
     </paths>
 </resources>
